Fix more issues with colour contrast

--- a/css/theme.css
+++ b/css/theme.css
@@ -19,6 +19,11 @@ html {
   background-color: var(--color-background);
 }
 
+.main-title {
+  color: #fff;
+  font-family: var(--font-secondary);
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-secondary);
   color: var(--color-primary);
